frontend/test/should_fail/index_003_incidence_count_element_argument_mismatch_exec.grg
#using "index_model_003.gm"

rule indexaccess {
	n:N;
	
	modify {
	---
		exec( { { countFromIndex(bar, n)==42 } } );
	}
}
